Make renderView method use applications temp path for cache

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "twig/twig": "~1.0"
   },
   "require-dev": {
+    "bluemvc/bluemvc-fakes": "dev-master",
     "phpunit/phpunit": ">=4.0"
   },
   "autoload": {
