--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "php": ">=5.6",
     "datatypes/datatypes": "~1.0",
     "bluemvc/bluemvc-core": "dev-master",
-    "twig/twig": "~1.28"
+    "twig/twig": "~1.28||~2.0"
   },
   "require-dev": {
     "bluemvc/bluemvc-fakes": "dev-master",
