--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   ],
   "require": {
     "php": ">=5.6",
-    "datatypes/datatypes": "~1.0",
+    "datatypes/datatypes": "~1.0||~2.0",
     "bluemvc/bluemvc-core": "dev-master",
     "twig/twig": "~1.28||~2.0"
   },
