--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,12 @@
   "require": {
     "php": ">=5.6",
     "datatypes/datatypes": "~1.0||~2.0",
-    "bluemvc/bluemvc-core": "dev-develop",
+    "bluemvc/bluemvc-core": "~1.0",
     "twig/twig": "~1.28||~2.0"
   },
   "require-dev": {
-    "bluemvc/bluemvc-fakes": "dev-develop",
-    "phpunit/phpunit": "~5.5||~6.0"
+    "bluemvc/bluemvc-fakes": "~1.0",
+    "phpunit/phpunit": "~5.5||~6.0||~7.0"
   },
   "autoload": {
     "psr-4": {
