--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
   ],
   "require": {
     "php": ">=7.1",
-    "datatypes/datatypes": "~1.0||~2.0",
-    "bluemvc/bluemvc-core": "dev-develop",
-    "twig/twig": "~1.28||~2.0"
+    "datatypes/datatypes": "^1.0||^2.0",
+    "bluemvc/bluemvc-core": "^2.0",
+    "twig/twig": "^1.28||^2.0"
   },
   "require-dev": {
-    "bluemvc/bluemvc-fakes": "dev-develop",
-    "phpunit/phpunit": "~5.5||~6.0||~7.0"
+    "bluemvc/bluemvc-fakes": "^2.0",
+    "phpunit/phpunit": "^5.5||^6.0||^7.0"
   },
   "autoload": {
     "psr-4": {
