--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,10 @@
     "psr-4": {
       "BlueMvc\\Twig\\Tests\\": "tests"
     }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-develop": "2.1-dev"
+    }
   }
 }
