--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description": "Twig view renderer for the BlueMvc PHP framework",
   "homepage": "https://bluemvc.com/",
   "license": "MIT",
+  "type": "library",
   "keywords": [
     "blue",
     "mvc",
@@ -24,7 +25,7 @@
   },
   "require-dev": {
     "bluemvc/bluemvc-fakes": "^2.0",
-    "phpunit/phpunit": "^5.5||^6.0||^7.0"
+    "phpunit/phpunit": "^7.0"
   },
   "autoload": {
     "psr-4": {
