--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
   },
   "require-dev": {
     "bluemvc/bluemvc-fakes": "^2.0",
-    "phpunit/phpunit": "^7.0"
+    "phpunit/phpunit": "^7.0||^8.0"
   },
   "autoload": {
     "psr-4": {
