Remove branch-alias and dev-dependencies from composer.json

--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
   ],
   "require": {
     "php": ">=7.3",
-    "datatypes/datatypes": "^2.4@dev",
-    "bluemvc/bluemvc-core": "^2.2@dev",
+    "datatypes/datatypes": "^2.4",
+    "bluemvc/bluemvc-core": "^2.2",
     "twig/twig": "^1.43||^2.0"
   },
   "require-dev": {
@@ -35,11 +35,6 @@
   "autoload-dev": {
     "psr-4": {
       "BlueMvc\\Twig\\Tests\\": "tests"
-    }
-  },
-  "extra": {
-    "branch-alias": {
-      "dev-develop": "2.2-dev"
     }
   }
 }
