Change required Twig version to 3.0

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "php": ">=8.0",
     "datatypes/datatypes": "^3.0",
     "bluemvc/bluemvc-core": "^3.0@dev",
-    "twig/twig": "^1.43||^2.0"
+    "twig/twig": "^3.0"
   },
   "require-dev": {
     "bluemvc/bluemvc-fakes": "^3.0@dev",
